[package]
name = "upwork-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
shuttle-axum = "0.54.0"
shuttle-runtime = "0.54.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "macros"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.4", features = ["cors"] }
shuttle-secrets = "0.42.0"
tower = "0.5.2"
